--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,83 +10,135 @@ env:
   SEQ_USER: sequelize_test
   SEQ_PW: sequelize_test
 
+# This configuration cancels previous runs if a new run is started on the same PR. Only one run at a time per PR.
+# This does not affect pushes to the v6 branch itself, only PRs.
+# from https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#example-using-a-fallback-value
+concurrency:
+  group: ${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
-  lint:
-    name: Lint code and docs
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 16.x
-      - run: yarn install --frozen-lockfile
-      - run: yarn lint
-      - run: yarn lint-docs
-  docs:
-    name: Generate docs
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 16.x
-      - run: yarn install --frozen-lockfile
-      - run: yarn docs
-  test-typings:
+  install-and-build:
     strategy:
       fail-fast: false
       matrix:
-        ts-version: ["4.1", "4.2", "4.3", "4.4", "4.5", "4.6", "4.7", "4.8"]
-    name: TS Typings (${{ matrix.ts-version }})
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 16.x
-      - run: yarn install --frozen-lockfile
-      - run: yarn add --dev typescript@~${{ matrix.ts-version }}
-      - run: yarn test-typings
-  test-oracle:
-    strategy:
-      fail-fast: false
-      matrix:
-        oracle-version: [18, 21]
         node-version: [10, 18]
-    name: Oracle DB ${{ matrix.oracle-version }} (Node ${{ matrix.node-version }})
+    name: Upload install and build artifact (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
-    env:
-      DIALECT: oracle
-      SEQ_ORACLE_USER: sequelizetest
-      SEQ_ORACLE_PW: sequelizepassword
-      SEQ_ORACLE_DB: XEPDB1
-      SEQ_ORACLE_HOST: localhost
-      SEQ_ORACLE_PORT: 1521
-      LD_LIBRARY_PATH: ${{ github.workspace }}/.oracle/instantclient
-      UV_THREADPOOL_SIZE: 128
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
-      - if: matrix.oracle-version == '18'
-        name: Install Local Oracle DB 18
-        run: yarn start-oracle-oldest
-      - if: matrix.oracle-version == '21'
-        name: Install Local Oracle DB 21
-        run: yarn start-oracle-latest
-      - name: Unit Tests
-        run: yarn test-unit
-      - name: Integration Tests
-        run: yarn test-integration
+          cache: yarn
+      - name: Install dependencies and build sequelize
+        run: yarn install --frozen-lockfile
+      - name: Compress artifact
+        run: tar -cf install-build-node-${{ matrix.node-version }}.tar ./lib ./node_modules ./types
+      - uses: actions/upload-artifact@v3
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+          path: install-build-node-${{ matrix.node-version }}.tar
+          retention-days: 1
+  lint:
+    name: Lint code
+    runs-on: ubuntu-latest
+    needs: install-and-build
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          cache: yarn
+      - uses: actions/download-artifact@v3
+        with:
+          name: install-build-artifact-node-18
+      - name: Extract artifact
+        run: tar -xf install-build-node-18.tar
+      - run: yarn lint-no-fix
+  unit-test:
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [10, 18]
+    name: Unit test all dialects (Node ${{ matrix.node-version }})
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
+      - uses: actions/download-artifact@v3
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
+      - name: Unit tests (mariadb)
+        run: yarn test-unit-mariadb
+      - name: Unit tests (mysql)
+        run: yarn test-unit-mysql
+      - name: Unit tests (postgres)
+        run: yarn test-unit-postgres
+      - name: Unit tests (sqlite)
+        run: yarn test-unit-sqlite
+      - name: Unit tests (mssql)
+        run: yarn test-unit-mssql
+      - name: Unit tests (db2)
+        run: yarn test-unit-db2
+      - name: Unit tests (oracle)
+        run: yarn test-unit-oracle
+      - name: Unit tests (snowflake)
+        run: yarn test-unit-snowflake
+  docs:
+    name: Generate docs
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          cache: yarn
+      - uses: actions/download-artifact@v3
+        with:
+          name: install-build-artifact-node-18
+      - name: Extract artifact
+        run: tar -xf install-build-node-18.tar
+      - run: yarn docs
+  test-typings:
+    strategy:
+      fail-fast: false
+      matrix:
+        ts-version: ["3.9", "4.0", "4.1", "4.2", "4.3", "4.4", "4.5", "4.6", "4.7", "4.8"]
+    name: TS Typings (${{ matrix.ts-version }})
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          cache: yarn
+      - uses: actions/download-artifact@v3
+        with:
+          name: install-build-artifact-node-18
+      - name: Extract artifact
+        run: tar -xf install-build-node-18.tar
+      # This step uses npm instead of yarn to minimize the time needed. See #14171
+      - name: Install TypeScript
+        run: npm install --no-save --no-audit typescript@~${{ matrix.ts-version }}
+      - name: Typing Tests
+        run: yarn test-typings
   test-db2:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [10, 16]
+        node-version: [10, 18]
     name: DB2 (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
+    needs: [ unit-test, test-typings ]
     env:
       DIALECT: db2
       SEQ_DB: testdb
@@ -95,74 +147,76 @@ jobs:
       SEQ_TEST_CLEANUP_TIMEOUT: 1200000
       SEQ_PORT: 50000
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
+          cache: yarn
+      - uses: actions/download-artifact@v3
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
       - name: Install Local DB2 Copy
-        run: yarn start-db2
-      - name: Unit Tests
-        run: yarn test-unit
-        continue-on-error: true
+        run: yarn start-db2-oldest
       - name: Integration Tests
         run: yarn test-integration
-        continue-on-error: true
   test-sqlite:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [10, 16]
+        node-version: [10, 18]
     name: SQLite (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
+    needs: [ unit-test, test-typings ]
     env:
       DIALECT: sqlite
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
-      - name: Unit Tests
-        run: yarn test-unit
+          cache: yarn
+      - uses: actions/download-artifact@v3
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
       - name: Integration Tests
         run: yarn test-integration
   test-postgres:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [10, 16]
-        postgres-version: [9.5, 10] # Does not work with 12
+        node-version: [10, 18]
+        postgres-version: [oldest, latest]
         minify-aliases: [true, false]
         native: [true, false]
     name: Postgres ${{ matrix.postgres-version }}${{ matrix.native && ' (native)' || '' }} (Node ${{ matrix.node-version }})${{ matrix.minify-aliases && ' (minified aliases)' || '' }}
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: sushantdhiman/postgres:${{ matrix.postgres-version }}
-        env:
-          POSTGRES_USER: sequelize_test
-          POSTGRES_DB: sequelize_test
-          POSTGRES_PASSWORD: sequelize_test
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    needs: [ unit-test, test-typings ]
     env:
-      SEQ_PORT: 5432
       DIALECT: ${{ matrix.native && 'postgres-native' || 'postgres' }}
       SEQ_PG_MINIFY_ALIASES: ${{ matrix.minify-aliases && '1' || '' }}
     steps:
-      - run: PGPASSWORD=sequelize_test psql -h localhost -p 5432 -U sequelize_test sequelize_test -c '\l'
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
-      - run: yarn add pg-native --ignore-engines
-        if: matrix.native
-      - name: Unit Tests
-        run: yarn test-unit
-        if: ${{ !matrix.minify-aliases }}
+          cache: yarn
+      - uses: actions/download-artifact@v3
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
+      - name: Install pg-native (Node 10)
+        run: yarn add pg-native --ignore-engines
+        if: matrix.native && matrix.node-version == 10
+      # This step uses npm instead of yarn to minimize the time needed. See #14171
+      - name: Install pg-native (Node 18)
+        run: npm install --no-save --no-audit pg-native
+        if: matrix.native && matrix.node-version == 18
+      - run: yarn start-postgres-${{ matrix.postgres-version }}
       - name: Integration Tests
         run: yarn test-integration
   test-mysql-mariadb:
@@ -171,29 +225,29 @@ jobs:
       matrix:
         include:
           - name: MySQL 5.7
-            image: mysql:5.7
+            image: mysql:5.7.37
             dialect: mysql
             node-version: 10
           - name: MySQL 5.7
-            image: mysql:5.7
+            image: mysql:5.7.37
             dialect: mysql
-            node-version: 16
+            node-version: 18
           - name: MySQL 8.0
-            image: mysql:8.0
+            image: mysql:8.0.28
             dialect: mysql
             node-version: 10
           - name: MySQL 8.0
-            image: mysql:8.0
+            image: mysql:8.0.28
             dialect: mysql
-            node-version: 16
+            node-version: 18
           - name: MariaDB 10.3
-            image: mariadb:10.3
+            image: mariadb:10.3.34
             dialect: mariadb
             node-version: 10
           - name: MariaDB 10.3
-            image: mariadb:10.3
+            image: mariadb:10.3.34
             dialect: mariadb
-            node-version: 16
+            node-version: 18
           - name: MariaDB 10.5
             image: mariadb:10.5
             dialect: mariadb
@@ -201,9 +255,10 @@ jobs:
           - name: MariaDB 10.5
             image: mariadb:10.5
             dialect: mariadb
-            node-version: 16
+            node-version: 18
     name: ${{ matrix.name }} (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
+    needs: [ unit-test, test-typings ]
     services:
       mysql:
         image: ${{ matrix.image }}
@@ -220,23 +275,27 @@ jobs:
       DIALECT: ${{ matrix.dialect }}
     steps:
       - run: mysql --host 127.0.0.1 --port 3306 -uroot -psequelize_test -e "GRANT ALL ON *.* TO 'sequelize_test'@'%' with grant option; FLUSH PRIVILEGES;"
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
-      - name: Unit Tests
-        run: yarn test-unit
+          cache: yarn
+      - uses: actions/download-artifact@v3
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
       - name: Integration Tests
         run: yarn test-integration
   test-mssql:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [10, 16]
-        mssql-version: [2017, 2019]
+        node-version: [10, 18]
+        mssql-version: [2017, 2022]
     name: MSSQL ${{ matrix.mssql-version }} (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
+    needs: [ unit-test, test-typings ]
     services:
       mssql:
         image: mcr.microsoft.com/mssql/server:${{ matrix.mssql-version }}-latest
@@ -258,58 +317,73 @@ jobs:
       SEQ_PORT: 1433
     steps:
       - run: /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P "Password12!" -Q "CREATE DATABASE sequelize_test; ALTER DATABASE sequelize_test SET READ_COMMITTED_SNAPSHOT ON;"
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
-      - name: Unit Tests
-        run: yarn test-unit
+          cache: yarn
+      - uses: actions/download-artifact@v3
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
       - name: Integration Tests
         run: yarn test-integration
-  test-snowflake:
+  test-oracle:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [10, 16]
-    name: SNOWFLAKE (Node ${{ matrix.node-version }})
+        oracle-version: [oldest, latest]
+        node-version: [10, 18]
+    name: Oracle DB ${{ matrix.oracle-version }} (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
     env:
-      DIALECT: snowflake
+      DIALECT: oracle
+      SEQ_ORACLE_USER: sequelizetest
+      SEQ_ORACLE_PW: sequelizepassword
+      SEQ_ORACLE_DB: XEPDB1
+      SEQ_ORACLE_HOST: localhost
+      SEQ_ORACLE_PORT: 1521
+      LD_LIBRARY_PATH: ${{ github.workspace }}/.oracle/instantclient
+      UV_THREADPOOL_SIZE: 128
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
-      - name: Unit Tests
-        run: yarn test-unit
-      # - name: Integration Tests
-      #   run: yarn test-integration
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
+      - run: yarn start-oracle-${{ matrix.postgres-version }}
+      - name: Integration Tests
+        run: yarn test-integration
   release:
     name: Release
     runs-on: ubuntu-latest
     needs:
       [
-        lint,
         docs,
-        test-typings,
         test-sqlite,
         test-postgres,
         test-mysql-mariadb,
         test-mssql,
+        test-oracle
       ]
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/v6' || github.ref == 'refs/heads/v6-beta')
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/v6' || github.ref == 'refs/heads/v7')
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
-      - run: yarn install --frozen-lockfile
-      - run: npx semantic-release
+          node-version: 18.x
+          cache: yarn
+      - uses: actions/download-artifact@v3
+        with:
+          name: install-build-artifact-node-18
+      - name: Extract artifact
+        run: tar -xf install-build-node-18.tar
+      - run: yarn semantic-release
       - id: sequelize
         uses: sdepold/github-action-get-latest-release@master
         with:
