--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
       - name: Install dependencies and build sequelize
-        run: yarn install --frozen-lockfile
+        run: yarn install --frozen-lockfile --ignore-engines
       - name: Compress artifact
         run: tar -cf install-build-node-${{ matrix.node-version }}.tar ./lib ./node_modules ./types
       - uses: actions/upload-artifact@v3
@@ -337,6 +337,7 @@ jobs:
         node-version: [10, 18]
     name: Oracle DB ${{ matrix.oracle-version }} (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
+    needs: [ unit-test, test-typings ]
     env:
       DIALECT: oracle
       SEQ_ORACLE_USER: sequelizetest
